charts/coco-supported/kbs-access/templates/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    app: curl
  annotations:
    peerpods: "true"
spec:
  runtimeClassName: kata-remote
  containers:
    - name: python-access
      image: ghcr.io/butler54/kbs-access-app:latest
      ports:
        - containerPort: 5000
      volumeMounts:
      - name: output-volume
        mountPath: /output
  volumes:
  - name: output-volume
    emptyDir: {}
