charts/coco-supported/kbs-access/templates/curl-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: curl
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: curl
  sessionAffinity: None
  type: ClusterIP
