charts/coco-supported/kbs-access/templates/sealed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sealed
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: sealed
  sessionAffinity: None
  type: ClusterIP
