charts/coco-supported/kbs-access/templates/secure-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: secure
  sessionAffinity: None
  type: ClusterIP
