charts/coco-supported/kbs-access/templates/curl-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: curl
spec:
  port:
    targetPort: 5000
  to:
    kind: Service
    name: curl
    weight: 100
  wildcardPolicy: None
