charts/coco-supported/kbs-access/templates/sealed-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sealed
spec:
  port:
    targetPort: 5000
  to:
    kind: Service
    name: sealed
    weight: 100
  wildcardPolicy: None
